...
            <Input
                ref={loginRef}
                containerStyle={{paddingTop: "3%"}}
                placeholder="Username"
                onChangeText={setLogin}
                value={login}
                testID="username"
            />
            <Input
                ref={passwordRef}
                containerStyle={{paddingTop: "3%"}}
                placeholder="Password"
                onChangeText={setPassword}
                secureTextEntry={true} 
                value={password}
                testID="password"
            />
            <Button disabled={buttonDisabled} testID="login-btn" onPress={() => {
                loginPress(login, password);
            }}>Login</Button>
        </View>
    );
}
