...
    // on first load call the server
    fetchData();
  }, []);


  return (
    <View style={{padding: "2%"}} testID="home-page">
          <Text style={{fontSize: 20}} testID="home-title">My Library</Text>
          {data.map((item, i) => <CarouselComponent key={i} data={item} />)}
    </View>
  );
}
